js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib1/l1a.0.kt
inline fun fun1() = "fun1"
